--- a/Term2BasicAssignment/Term2BasicAssignment.vcxproj
+++ b/Term2BasicAssignment/Term2BasicAssignment.vcxproj
@@ -111,6 +111,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="mapNode.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="mapNode.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
